syntax = "proto3";

import "google/protobuf/timestamp.proto";

service SpookyStore {
    rpc AuthorizeGoogle(User) returns (User) {}
    rpc GetUser(UserRequest) returns (UserResponse) {}
    rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse) {}
    rpc GetProduct(GetProductRequest) returns (Product) {}
    rpc AddProductToCart(AddProductRequest) returns (AddProductResponse) {}
    rpc ClearCart(UserRequest) returns (ClearCartResponse) {}
    rpc Checkout(UserRequest) returns (CheckoutResponse) {}
    rpc GetNumTransactions(GetNumTransactionsRequest) returns (NumTransactionsResponse) {}
}


message User {
    string GoogleID = 1;
    string ID = 2; 
    string DisplayName = 3;
    string Picture = 4;
    Cart Cart = 5;
    repeated Transaction Transactions = 6;  
    string Email = 7;
}

message Product {
    string ID = 1;
    string DisplayName = 2; 
    string PictureURL = 3;
    float Cost = 4; 
    string Description = 5;
}

message Cart { 
    map<string, CartItem> Items = 1; 
    float TotalCost = 2;  
}

message CartItem {
    string ID = 1; 
    string DisplayName = 2; 
    float Cost = 4; 
    int32 Quantity = 5;
}

message Transaction {
    string ID = 1; 
    google.protobuf.Timestamp CompletedTime = 2;
    Cart Items = 3; 
}

message TransactionCounter {
    int32 NumTransactions = 1; 
}


message UserRequest {
    string ID = 1;
}

message UserResponse {
    bool Found = 1;
    User User = 2;
}

message GetProductRequest {
    string ID = 1;
}

message GetAllProductsRequest {
}

message GetAllProductsResponse {
    repeated Product ProductList = 1; 
}

message AddProductRequest {
    string UserID = 1;
    string ProductID = 2; 
    int32 Quantity = 3; 
}

message AddProductResponse {
    bool Success = 1;
}


message GetNumTransactionsRequest {
}

message NumTransactionsResponse {
    int32 NumTransactions = 1; 
}


message ClearCartResponse {
    bool Success = 1; 
}

message CheckoutResponse {
    bool Success = 1; 
}
